# Playground

./: .gitignore  CLAUDE.md  README.md
container/: Makefile  README.md  contained.c
interpreter/: CMakeLists.txt  Makefile  README.md
interpreter/include/monkey/: ast.h  box.h  env.h  eval.h  lexer.h  object.h  overload.h  parser.h  repl.h  token.h
interpreter/src/: CMakeLists.txt  ast.cpp  env.cpp  eval.cpp  lexer.cpp  main.cpp  object.cpp  parser.cpp  repl.cpp
interpreter/test/: CMakeLists.txt  ast_test.cpp  eval_test.cpp  lexer_test.cpp  parser_test.cpp  test.cpp
tinyrenderer/: .clang-tidy
